kubernetes/apps/production/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
spec:
  ingressClassName: traefik
  rules:
    - host: n8n.ninjatronics.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
